[package]
name = "rust_metrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
executors = "0.9"
threadpool = "1.8.1"
subprocess = "0.2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
chrono = "0.4.9"
